2008-02-20  Luca Bruno  <lethalman88@gmail.com>

        * syx/syx-object.h (syx_string_new_ref): renamed from syx_string_new_unref
        All calls have been updated

        * plugins/readline/plugin-init.c (ReadLine_readline): reference the returned string instead of creating a new one

        * syx/syx-primitives.c (FileStream_fileOp): fixed possible memory leak

        * st/kernel/Console.st: added ConsoleChunkReader to fix multiple statements handling

        * syx/syx-object.h (syx_string_new): use SYX_VSPRINTF

        * syx/syx-utils.h (SYX_VSPRINTF): added

        * syx/syx-utils.c (syx_vsprintf): removed
        (syx_sprintf): removed

2008-02-18  Luca Bruno  <lethalman88@gmail.com>

        * syx/syx-lexer.c (_syx_lexer_token_identifier): fix var:=val assignment
        (_syx_lexer_token_number): fix D.! syntax, where D is a digit (issue #28)

        * syx/syx-interp.h (syx_interp_is_initialized): removed, use syx_system_initialized instead
        All calls have been updated.

        * syx/syx-parser.c (_syx_parser_parse_term): raise a new error for bad expression starts

2008-01-25  Luca Bruno  <lethalman88@gmail.com>

        Replaced all occurrences of NotFound signal with #errorNotFound.

        * st/kernel/initialDecl.st: (NotKeyed): added class

        * st/kernel/Dictionary.st (printOn): stop after maxPrint

        * st/kernel/ArrayedCollection.st (with:with:with): added
        (with:with:with:with): added

        * st/kernel/Interval.st (species): added
        (copyClass): removed
        (collectClass): removed

        * st/kernel/Collection.st (copyEmptyForCollect):
        (copyClass): removed
        (collectClass): removed
        (with:with:with): added
        (with:with:with:with): added
        (removeAll): added
        (maxPrint): added
        (printOn): stop after maxPrint
        (notKeyed): added

        * st/kernel/Object.st (species): added
        (errorNotFound): added
